--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,3 +1,20 @@
 body, html
     height: 100%
     margin: 0
+
+.capitalize
+    text-transform: capitalize
+
+.icon
+    width: '20px'
+    justify-content: 'center'
+
+.overlay
+    background-color: #E0E0E020
+    z-index: 9999
+    width: 100vw
+    height: 100vh
+    display: flex
+    justify-content: center
+    flex-direction: column
+    position: absolute
